[package]
name = "ll-udp-pubsub"
version = "0.1.0"
edition = "2021"
author = "Maxim Vorobjov"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bincode = "1.1"    
bytes = "1.1"
libc = "0.2"
serde = { version = "1" }

[dev-dependencies]
clap = { version = "3.0", features = ["derive"] }

