[package]
name = "ll-udp-pubsub"
version = "0.1.0"
edition = "2021"
author = "Maxim Vorobjov"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cooperative_waiting = []

[dependencies]
bincode = "1.1"    
bytes = "1.1"
libc = "0.2"
log = "0.4"
scc = "1.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"

